assets/css/main.css
@charset "UTF-8";
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, tt, var,
b, u, i, center, a, summary, details,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    font-family: sans;
    line-height: 1;
}
ol, ul {
    list-style: none;
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}
@media (min-width: 240px) {
    :root {
        font-size: 3.6vw;
    }
    body > header {
        grid-template-columns: 14ex 65% 0;
    }
    body > header menu#sections li a {
        font-size: 0;
    }
    body > header menu#sections li a::before {
        font-size: .9rem;
    }
    body > header menu#top {
        display: none;
    }
    h6.domain {
        display: none;
    }
}
@media (min-width: 480px) {
    :root {
        font-size: 2.8vw;
    }
}
@media (min-width: 576px) {
    :root {
        font-size: 2.2vw;
    }
    body > header menu {
        padding-top: .6em;
    }
    body > header menu#sections li a {
        font-size: 0;
        width: 1em;
    }
    body > header menu#sections li a svg {
        font-size: inherit;
    }
    body > header menu#top {
        display: unset;
    }
    h6.domain {
        display: inline;
    }
}
@media (min-width: 768px) {
    :root {
        font-size: 1.9vw;
    }
}
@media (min-width: 992px) {
    :root {
        font-size: 1.4vw;
    }
}
@media (min-width: 1050px) {
    :root {
        font-size: 1.1vw;
    }
}
@media (min-width: 1200px) {
    :root {
        font-size: 1.2vw;
    }
    h6.domain {
        display: inline;
    }
}
@media (min-width: 1500px) {
    :root {
        font-size: .9vw;
    }
}
@media (min-width: 1700px) {
    :root {
        font-size: .95vw;
    }
}
@media (min-width: 1800px) {
    :root {
        font-size: .75vw;
    }
}
@media (min-width: 2200px) {
    :root {
        font-size: .7vw;
    }
}
:root {
    height: 100%;
}
body {
    background: Window;
    color: WindowText;
    min-height: 100%;
    display: grid;
    padding: 0 .5rem 0 .5rem;
    /*grid-gap: .5rem;*/
    grid-template-rows: 2rem 1fr 2rem;
    grid-template-areas: "header" "main" "footer";
}
p {
    /*text-indent: -.6rem;*/
    word-break: break-word;
    /*hyphens: auto;*/
}
p + p {
    padding-top: .6rem;
}
menu li {
    display: inline-block;
}
a {
    color: blue;
}
a:visited {
    color: rebeccapurple;
}
a:active {
    color: red;
}
a:not([href]) {
    color: WindowText;
}
.inverted {
    color: Window !important;
    background-color: WindowText !important;
}
.inverted a {
    color: dodgerblue;
}
.inverted a:visited {
    color: mediumpurple;
}
.inverted a:active {
    color: red;
}
.inverted a:not([href]) {
    color: WindowFrame;
}
.inverted a[href] svg path {
    fill: dodgerblue;
}
.inverted a[href]:visited svg path {
    fill: mediumpurple;
}
a[href] svg path {
    fill: blue;
}
a[href]:active svg.icon path {
    fill: red;
}
a[href]:visited svg path {
    fill: rebeccapurple;
}
a:not([href]) svg.icon path {
    fill: WindowText;
}
.inverted a:not([href]) svg path {
    fill: WindowFrame;
}
body.inverted > header h1 a,
body.inverted > header h1 a:active,
body.inverted > header h1 a:visited,
body.inverted > header h1 a:focus
{
    color: Window;
}
body > header {
    display: grid;
    grid-template-columns: 9rem 3fr 2fr;
    grid-area: header;
    margin: .5rem 0 0 0;
}
body > header h1 {
    font-size: 1.6em;
    font-weight: lighter;
}
body > header h1 small {
    opacity: 0.5;
}
body > header h1 a[href] svg.icon path {
    fill: WindowText;
}
body.inverted > header h1 a[href] svg.icon path {
    fill: WindowFrame;
}
body > header menu {
    padding-top: .6em;
}
body > header menu#sections {}
body > header menu#top {
    text-align: right;
}
body > header menu a,
body > header menu a:visited,
body > header menu a:active
{
    text-decoration: none;
}
body > header h1 a,
body > header h1 a:hover,
body > header h1 a:visited,
body > header h1 a:active
{
    color: WindowText;
    text-decoration: none;
}
.icon {
    vertical-align: central;
}
svg {
    height: 100%;
    width: auto;
}
svg.icon {
    height: 1em;
    width: auto;
}
svg.icon path {
    fill: WindowText;
}
.inverted svg.icon path {
    fill: WindowFrame;
}
svg.icon-activitypub {
    vertical-align: bottom;
    margin-right: .2em;
}
svg:not(:root) {
    overflow: visible;
}
body > header {
    padding-left: .35rem;
}
body > header h1 .icon-trash {
    height: 1.6rem;
    width: 1.6rem;
    vertical-align: baseline;
}
menu#top li:first-child::before,
menu#bottom li:first-child::before {
    content: "";
}
menu#top li::before,
menu#bottom li::before {
    content: " | ";
}
menu#bottom li.version::before {
    content: "";
}
menu#bottom i::before {
    margin: unset;
}
menu#top {
    font-size: .8rem;
    text-align: right;
}
body > main {
    margin-top: 1rem;
    grid-area: main;
}
body > footer {
    grid-area: footer;
    font-size: 0.7rem;
}
.item h1,
.item h2,
.item h3,
.item h4,
.item h5,
.item h6 {
    font-weight: normal;
    /*margin: 0.2em 0;*/
}
.item h1 {
    font-size: 1.22em;
}
.item h2 {
    font-size: 1.16em;
}
.item h3 {
    font-size: 1.11em;
}
.item h4 {
    font-size: 1em;
}
.item h5 {
    font-size: .96em;
}
.item h6 {
    font-size: .94em;
}
.item h1 a {
    /*padding-left: 0.3em;*/
}
/* ... */

